manifests/prod/kev/EndpointSlice-kev.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 100.94.190.65
    conditions:
      ready: true
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: kev
  name: kev
  namespace: kev
ports:
  - name: http
    port: 8009
    protocol: TCP
