manifests/prod/kev/Service-kev.yaml
apiVersion: v1
kind: Service
metadata:
  name: kev
  namespace: kev
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8009
  type: ClusterIP
